common/throttle: add a function to handle some logic before into m_blockers

Fixes: https://tracker.ceph.com/issues/47371
Signed-off-by: shminjs <shminjs@outlook.com>